--- a/arches_hip/templates/views/forms/external-reference.htm
+++ b/arches_hip/templates/views/forms/external-reference.htm
@@ -23,10 +23,10 @@
 
                                                         <!-- Screens greater than xs -->
                                                         <form class="form-inline arches-form hidden-xs" role="form">
-                                                            <div class="form-group" style="width: 100%; margin-left:12px">
+                                                            <div class="form-group  hidden-xs" style="width: 100%; margin-left:12px">
                                                                 
                                                                 <!-- System Type -->  
-                                                            <input style="width:50%; height: 36px; padding: 2px;" class="select2 arches-select2-crud-form reference-type" id="" data-bind="select2: {value: getEditedNode('EXTERNAL_XREF_TYPE.E55', 'value'), placeholder: '{% trans "reference type" %}', multiple: false, dataKey: 'EXTERNAL_XREF_TYPE.E55'}"></input>
+                                                            <input style="width:50%; height: 36px; padding: 2px;" class="select2 arches-select2-crud-form reference-type  hidden-xs" id="" data-bind="select2: {value: getEditedNode('EXTERNAL_XREF_TYPE.E55', 'value'), placeholder: '{% trans "reference type" %}', multiple: false, dataKey: 'EXTERNAL_XREF_TYPE.E55'}"></input>
                                                                 <!-- Value -->
                                                             <input class="form-control arches-form-input hidden-xs" id="resource-name" style="width: 30%;" placeholder="value" data-bind='value: getEditedNode("EXTERNAL_XREF.E42", "value")'>     
                                                             
@@ -41,31 +41,14 @@
                                                         <!-- XS Screens -->
                                                         <form class="form-inline arches-form hidden-sm hidden-md hidden-lg" role="form">
                                                             <div class="form-group" style="width: 100%;">
-                                                                
-                                                                <!-- System Reference Type -->  
-                                                                <input class="reference-type" id="" name="" style="width:100%;"  value="">     
-
-                                                                <!-- Spacer (for xs screens) -->
-                                                                <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
+                                                            <input style="width:100%; height: 36px; padding: 2px;" class="select2 arches-select2-crud-form reference-type" id="" data-bind="select2: {value: getEditedNode('EXTERNAL_XREF_TYPE.E55', 'value'), placeholder: '{% trans "reference type" %}', multiple: false, dataKey: 'EXTERNAL_XREF_TYPE.E55'}"></input>
+                                                            <!-- Spacer (for xs screens) -->
+                                                            <div class="margin-top-5"></div>
+                                                            <input class="form-control arches-form-input" id="resource-name" style="width: 100%;" placeholder="value" data-bind='value: getEditedNode("EXTERNAL_XREF.E42", "value")'>     
+                                                            <!-- Spacer (for xs screens) -->
+                                                            <div class="margin-top-5"></div>
                                                             
-                                                                <!-- Value -->
-                                                                <input class="form-control arches-form-input" id="measurement-value" style="width: 100%;" placeholder="value">
-
-                                                                <!-- Spacer (for xs screens) -->
-                                                                <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
-
-                                                                <!-- Add Button -->
-                                                                <div class="btn-group">
-                                                                    <button type="button" id="address-button" class="btn btn-primary" style="height: 32px;">Add</button>
-                                                                    <button type="button" class="btn btn-primary dropdown-toggle" style="height: 32px;" data-toggle="dropdown">
-                                                                        <i class="fa fa-chevron-down"></i>
-                                                                        <span class="sr-only">Toggle Dropdown</span>                            
-                                                                    </button>
-                                                                    <ul class="dropdown-menu" role="menu">
-                                                                        <li><a href="#">Discard edits</a></li>
-                                                                    </ul>
-                                                                </div>
-                                                                <!-- End Add Button -->
+                                                            {% include 'views/components/add-item-button.htm' %} 
                                                                 
                                                             </div>
                                                         </form>
