adding drag and drop file feature for location form

--- a/arches_hip/templates/views/forms/location.htm
+++ b/arches_hip/templates/views/forms/location.htm
@@ -136,24 +136,8 @@
                                             </div>
                                         </dd>
 
-                                        <dd class="">
-                                            <div class="arches-tool-item">
-                                                
-                                                <a href="javascript:void(0);" class="arches-tool-text" title="">
-                                                    <i class="fa fa-upload"></i>
-                                                    {% trans 'Import .gpx file' %}
-                                                </a>
-                                            </div>
-                                        </dd>
-
-                                        <dd class="">
-                                            <div class="arches-tool-item">
-                                                
-                                                <a href="javascript:void(0);" class="arches-tool-text" title="">
-                                                    <i class="fa fa-code"></i>
-                                                    {% trans 'Import WKT (Well Known Text)' %}
-                                                </a>
-                                            </div>
+                                        <dd class="geom-file-instructions">
+                                            To add geometries from a GPX, KML, or GeoJSON file, drag and drop the file onto the map
                                         </dd>
                                         
                                     </dl>
@@ -169,7 +153,7 @@
             <!-- End Overlays Panel -->
 
             <!-- Map Tools -->
-            <div class="row">
+            <div class="row" style="height:0px;">
 
                 <div class="btn-group" style="top:-100px;left:85px;">
 
