--- a/arches_hip/templates/views/forms/classification.htm
+++ b/arches_hip/templates/views/forms/classification.htm
@@ -27,9 +27,9 @@
                                     <div class="form-group hidden-xs" style="width: 100%;">
                                         
                                         <!-- Resource Type/Use/Style -->     
-                                            <input style="width:25%; height: 36px; padding: 2px;" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown" data-bind="select2: {value: getEditedNode('HERITAGE_RESOURCE_TYPE.E55', 'value'), placeholder: '{% trans "type" %}', multiple: false, dataKey: 'HERITAGE_RESOURCE_TYPE.E55'}"></input>
-                                            <input style="width:25%; height: 36px; padding: 2px;" class="select2 arches-select2-crud-form resource-type" id="resource-use-type-dropdown" data-bind="select2: {value: getEditedNode('HERITAGE_RESOURCE_USE_TYPE.E55', 'value'), placeholder: '{% trans "use" %}', multiple: false, dataKey: 'HERITAGE_RESOURCE_USE_TYPE.E55'}"></input>
-                                            <input style="width:25%; height: 36px; padding: 2px;" class="select2 arches-select2-crud-form resource-type" id="style-dropdown" data-bind="select2: {value: getEditedNode('STYLE.E55', 'value'), placeholder: '{% trans "style" %}', multiple: false, dataKey: 'STYLE.E55'}"></input>
+                                            <input style="width:25%;" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown" data-bind="select2: {value: getEditedNode('HERITAGE_RESOURCE_TYPE.E55', 'value'), placeholder: '{% trans "type" %}', multiple: false, dataKey: 'HERITAGE_RESOURCE_TYPE.E55'}"></input>&nbsp;
+                                            <input style="width:25%;" class="select2 arches-select2-crud-form resource-type" id="resource-use-type-dropdown" data-bind="select2: {value: getEditedNode('HERITAGE_RESOURCE_USE_TYPE.E55', 'value'), placeholder: '{% trans "use" %}', multiple: false, dataKey: 'HERITAGE_RESOURCE_USE_TYPE.E55'}"></input>&nbsp;
+                                            <input style="width:25%;" class="select2 arches-select2-crud-form resource-type" id="style-dropdown" data-bind="select2: {value: getEditedNode('STYLE.E55', 'value'), placeholder: '{% trans "style" %}', multiple: false, dataKey: 'STYLE.E55'}"></input>
 
                                         {% include 'views/components/add-item-button.htm' %}
 
@@ -38,18 +38,18 @@
 
                                         <!-- Period and From/To Dates -->
                                         <div>
-                                            <div style="width:25%; height: 36px; padding: 2px;" class="select2 arches-select2-crud-form resource-type" id="period-dropdown" data-bind="select2: {value: getEditedNode('CULTURAL_PERIOD.E55', 'value'), placeholder: '{% trans "Period" %}', multiple: false, dataKey: 'CULTURAL_PERIOD.E55'}"></div>
+                                            <div style="width:25%;" class="select2 arches-select2-crud-form resource-type" id="period-dropdown" data-bind="select2: {value: getEditedNode('CULTURAL_PERIOD.E55', 'value'), placeholder: '{% trans "period" %}', multiple: false, dataKey: 'CULTURAL_PERIOD.E55'}"></div>&nbsp;
                                         
                                             <div class="form-group" style="padding-left: 0px; padding-right: 0px; width: 25%;">
-                                                <div class="input-group datetimepicker" style ="width:100%; height: 34px;" >
-                                                    <input type="text" id="date" placeholder="{% trans 'From' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('FROM_DATE.E49', 'value')} ">
+                                                <div class="input-group datetimepicker" style ="width:100%;" >
+                                                    <input type="text" id="date" style="height: 32px;" placeholder="{% trans 'From' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('FROM_DATE.E49', 'value')} ">
                                                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                                 </div>
-                                            </div>
+                                            </div>&nbsp;
 
                                             <div class="form-group" style="padding-left: 0px; padding-right: 0px; width: 25%;">
-                                                <div class="input-group datetimepicker" style ="width:100%; height: 34px;" >
-                                                    <input type="text" id="date" placeholder="{% trans 'To' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('TO_DATE.E49', 'value')} ">
+                                                <div class="input-group datetimepicker" style ="width:100%;" >
+                                                    <input type="text" id="date" style="height: 32px;" placeholder="{% trans 'To' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('TO_DATE.E49', 'value')} ">
                                                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                                 </div>
                                             </div>
@@ -165,15 +165,15 @@
                             <div class="col-xs-12">
 
                                 <!-- Input for screens > xs -->
-                                <form class="form-inline arches-form hidden-xs" role="form">
+                                <form class="form-inline hidden-xs" role="form">
                                     <div class="form-group" style="width: 100%">
                                         
                                         <!-- Component/Technique/Material -->       
-                                        <input style="width:25%; height: 36px; padding: 2px;" class="select2 arches-select2-crud-form resource" id="resource-type-dropdown
-                                    " data-bind="select2: {value: getEditedNode('COMPONENT_TYPE.E55', 'value'), placeholder: '{% trans "component" %}', multiple: false, dataKey: 'COMPONENT_TYPE.E55'}"></input>
-                                        <input style="width:25%; height: 36px; padding: 2px;" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown
-                                    " data-bind="select2: {value: getEditedNode('CONSTRUCTION_TECHNIQUE.E55', 'value'), placeholder: '{% trans "technique" %}', multiple: false, dataKey: 'CONSTRUCTION_TECHNIQUE.E55'}"></input>
-                                        <input style="width:25%; height: 36px; padding: 2px;" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown
+                                        <input style="width:25%;" class="select2 arches-select2-crud-form resource" id="resource-type-dropdown
+                                    " data-bind="select2: {value: getEditedNode('COMPONENT_TYPE.E55', 'value'), placeholder: '{% trans "component" %}', multiple: false, dataKey: 'COMPONENT_TYPE.E55'}"></input>&nbsp;
+                                        <input style="width:25%;" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown
+                                    " data-bind="select2: {value: getEditedNode('CONSTRUCTION_TECHNIQUE.E55', 'value'), placeholder: '{% trans "technique" %}', multiple: false, dataKey: 'CONSTRUCTION_TECHNIQUE.E55'}"></input>&nbsp;
+                                        <input style="width:25%;" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown
                                     " data-bind="select2: {value: getEditedNode('MATERIAL.E57', 'value'), placeholder: '{% trans "material" %}', multiple: false, dataKey: 'MATERIAL.E57'}"></input>
 
                                             {% include 'views/components/add-item-button.htm' %}
@@ -183,7 +183,7 @@
                                 <!-- End Input for screens > xs -->
 
                                 <!-- Input for screens = xs -->
-                                <form class="form-inline arches-form hidden-sm hidden-md hidden-lg" role="form">
+                                <form class="form-inline hidden-sm hidden-md hidden-lg" role="form">
                                     <div class="form-group" style="width: 100%">
 
                                         
@@ -266,7 +266,7 @@
                             <div class="col-xs-12">
 
                                 <!-- Form for screens > xs -->
-                                <form class="form-inline arches-form hidden-xs" role="form">
+                                <form class="form-inline hidden-xs" role="form">
                                     <div class="form-group" style="width: 100%">
                                         
                                         <!-- Related Features -->     
@@ -279,7 +279,7 @@
                                 <!-- Form for screens > xs -->
 
                                 <!-- Form for screens = xs -->
-                                <form class="form-inline arches-form hidden-sm hidden-md hidden-lg" role="form">
+                                <form class="form-inline hidden-sm hidden-md hidden-lg" role="form">
                                     <div class="form-group" style="width: 100%">
                                                                                 <!-- Related Features -->     
                                     <input style="width:100%; margin-bottom: 5px" class="select2 arches-select2-crud-form resource-type related-features" id="ancillary-type-dropdown" data-bind="select2: {value: getEditedNode('ANCILLARY_FEATURE_TYPE.E55', 'value'), placeholder: '{% trans "related feature" %}', multiple: false, dataKey: 'ANCILLARY_FEATURE_TYPE.E55'}"></input>
@@ -366,11 +366,11 @@
                         <div class="col-xs-12">
 
                             <!-- Form for screens > xs -->
-                            <form class="form-inline arches-form hidden-xs" role="form">
+                            <form class="form-inline hidden-xs" role="form">
                                 <div class="form-group" style="width: 100%">
                                     
                                     <!-- Mods -->     
-                                    <input style="width:75%; height: 36px; padding-top: 2px; padding-right: 4px; display: inline-block;" class="modifications select2 arches-select2-crud-form name-type hidden-xs" id="resource-modification-type" data-bind="select2: {value: getEditedNode('MODIFICATION_TYPE.E55', 'value'), placeholder: 'modification type', dataKey: 'MODIFICATION_TYPE.E55'}"></input>
+                                    <input style="width:75%; display: inline-block;" class="modifications select2 arches-select2-crud-form name-type hidden-xs" id="resource-modification-type" data-bind="select2: {value: getEditedNode('MODIFICATION_TYPE.E55', 'value'), placeholder: 'modification type', dataKey: 'MODIFICATION_TYPE.E55'}"></input>
 
                                     {% include 'views/components/add-item-button.htm' %} 
                                     <!-- Simple HTML Editor -->
@@ -384,7 +384,7 @@
                             <!-- Form for screens > xs -->
 
                             <!-- Form for screens = xs -->
-                            <form class="form-inline arches-form hidden-sm hidden-md hidden-lg" role="form">
+                            <form class="form-inline hidden-sm hidden-md hidden-lg" role="form">
                                 <div class="form-group" style="width: 100%">
                                                                         <!-- Mods -->     
                                     <!-- Mods -->     
