Fix position of "no xxxx defined" on Location CRUD form

--- a/arches_hip/templates/views/forms/external-reference.htm
+++ b/arches_hip/templates/views/forms/external-reference.htm
@@ -22,11 +22,11 @@
                                                     <div class="col-xs-12 padding-left-0">
 
                                                         <!-- Screens greater than xs -->
-                                                        <form class="form-inline arches-form hidden-xs" role="form">
+                                                        <form class="form-inline hidden-xs" role="form">
                                                             <div class="form-group  hidden-xs" style="width: 100%; margin-left:12px">
                                                                 
                                                                 <!-- System Type -->  
-                                                            <input style="width:50%; height: 36px; padding: 2px;" class="select2 arches-select2-crud-form reference-type  hidden-xs" id="" data-bind="select2: {value: getEditedNode('EXTERNAL_XREF_TYPE.E55', 'value'), placeholder: '{% trans "reference type" %}', multiple: false, dataKey: 'EXTERNAL_XREF_TYPE.E55'}"></input>
+                                                            <input style="width:50%;" class="select2 arches-select2-crud-form reference-type  hidden-xs" id="" data-bind="select2: {value: getEditedNode('EXTERNAL_XREF_TYPE.E55', 'value'), placeholder: '{% trans "reference type" %}', multiple: false, dataKey: 'EXTERNAL_XREF_TYPE.E55'}"></input>&nbsp;
                                                                 <!-- Value -->
                                                             <input class="form-control arches-form-input hidden-xs" id="resource-name" style="width: 30%;" placeholder="value" data-bind='value: getEditedNode("EXTERNAL_XREF.E42", "value")'>     
                                                             
@@ -39,7 +39,7 @@
                                                         <!-- End Screens greater than xs -->
 
                                                         <!-- XS Screens -->
-                                                        <form class="form-inline arches-form hidden-sm hidden-md hidden-lg" role="form">
+                                                        <form class="form-inline hidden-sm hidden-md hidden-lg" role="form">
                                                             <div class="form-group" style="width: 100%;">
                                                             <input style="width:100%; height: 36px; padding: 2px;" class="select2 arches-select2-crud-form reference-type" id="" data-bind="select2: {value: getEditedNode('EXTERNAL_XREF_TYPE.E55', 'value'), placeholder: '{% trans "reference type" %}', multiple: false, dataKey: 'EXTERNAL_XREF_TYPE.E55'}"></input>
                                                             <!-- Spacer (for xs screens) -->
