--- a/arches_hip/templates/views/forms/location.htm
+++ b/arches_hip/templates/views/forms/location.htm
@@ -185,7 +185,7 @@
                         {% trans 'This resource is represented by the following geometries:' %}
                     </dd>
 
-                    <div data-bind="visible: getBranchLists().length == 0" class="txt-color-blue">{% trans "No geometries defined" %}</div>   
+                    <div data-bind="visible: getBranchLists().length == 0" class="margin-left-5 txt-color-blue">{% trans "No geometries defined" %}</div>   
 
                     <dd class="margin-left-5" data-bind='foreach: getBranchLists()'>
                         <div class="arches-crud-record">
@@ -285,7 +285,7 @@ parcel-section
                     <dd class="arches-CRUD-child-title">
                         {% trans 'This resource has the following addresses:' %}
                     </dd>
-                    <div data-bind="visible: getBranchLists().length == 0" class="txt-color-blue">{% trans "No Addresses Defined" %}</div>   
+                    <div data-bind="visible: getBranchLists().length == 0" class="margin-left-5 txt-color-blue">{% trans "No Addresses Defined" %}</div>   
 
                     <div data-bind='foreach: getBranchLists()'>
                         <dd class="margin-left-5">
@@ -402,7 +402,7 @@ parcel-section
                         {% trans 'This resource has the following Settings:' %}
                     </dd>
 
-                    <div data-bind="visible: getBranchLists().length == 0" class="txt-color-blue">{% trans "No Settings Defined" %}</div>   
+                    <div data-bind="visible: getBranchLists().length == 0" class="margin-left-5 txt-color-blue">{% trans "No Settings Defined" %}</div>   
 
                     <div data-bind='foreach: getBranchLists()'>
                         <dd class="margin-left-5">
@@ -498,7 +498,7 @@ parcel-section
                         {% trans 'This resource is located in the following Administrative Areas:' %}
                     </dd>
 
-                    <div data-bind="visible: getBranchLists().length == 0" class="txt-color-blue">{% trans "No Administrative Areas Defined" %}</div>   
+                    <div data-bind="visible: getBranchLists().length == 0" class="margin-left-5 txt-color-blue">{% trans "No Administrative Areas Defined" %}</div>   
 
                     <div data-bind='foreach: getBranchLists()'>
                         <dd class="margin-left-5">
@@ -588,7 +588,7 @@ parcel-section
                         This resource is related to the following Parcels:
                     </dd>  
 
-                    <div data-bind="visible: getBranchLists().length == 0" class="txt-color-blue">{% trans "No Parcels Defined" %}</div>   
+                    <div data-bind="visible: getBranchLists().length == 0" class="margin-left-5 txt-color-blue">{% trans "No Parcels Defined" %}</div>   
 
                     <div data-bind='foreach: getBranchLists()'>
                         <dd class="margin-left-5">
