--- a/arches_hip/templates/views/forms/description.htm
+++ b/arches_hip/templates/views/forms/description.htm
@@ -22,10 +22,10 @@
                             <div class="col-xs-12">
 
                                 <!-- Form for screens > xs -->
-                                <form class="form-inline arches-form hidden-xs" role="form">
+                                <form class="form-inline hidden-xs" role="form">
                                     <div class="form-group" style="width: 100%">
 
-                                        <input style="width:80%; height: 36px; padding-top: 2px; padding-right: 4px; display: inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-unit" data-bind="select2: {value: getEditedNode('DESCRIPTION_TYPE.E55', 'value'), placeholder: 'Type', dataKey: 'DESCRIPTION_TYPE.E55'}"></input>
+                                        <input style="width:80%; display: inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-unit" data-bind="select2: {value: getEditedNode('DESCRIPTION_TYPE.E55', 'value'), placeholder: 'Type', dataKey: 'DESCRIPTION_TYPE.E55'}"></input>
 
                                         <!-- Spacer (for xs screens) -->
                                         <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>                                    
