--- a/arches_hip/templates/views/forms/location.htm
+++ b/arches_hip/templates/views/forms/location.htm
@@ -136,8 +136,19 @@
                                             </div>
                                         </dd>
 
+                                        <dd class="">
+                                            <div class="arches-tool-item file-upload">
+                                                
+                                                <a href="javascript:void(0);" data-geometrytype="Polygon" class="arches-tool-text geometry-btn info-link" title="">
+                                                    <i class="fa fa-upload"></i>
+                                                    {% trans 'Add from gpx, kml, or geojson' %}
+                                                </a>
+                                                <input type="file" class="upload geom-upload" accept=".gpx, .kml, .geojson, .json"/>
+                                            </div>
+                                        </dd>
+
                                         <dd class="geom-file-instructions">
-                                            To add geometries from a GPX, KML, or GeoJSON file, drag and drop the file onto the map
+                                            {% trans '(or drag and drop the file onto the map)' %}
                                         </dd>
                                         
                                     </dl>
