UI Tweaks to location form

--- a/arches_hip/templates/views/forms/location.htm
+++ b/arches_hip/templates/views/forms/location.htm
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-xs-4 col-xs-offset-1" style="">
 
-                    <div id="basemaps-panel" class="tools-panel hidden" style="margin-top: -490px; overflow-y: scroll; border-top-left-radius: 5px; border-top-right-radius: 5px; height: 435px;">
+                    <div id="basemaps-panel" class="tools-panel hidden" style="margin-top: -490px; overflow-y: scroll; height: 435px;">
                         <div class="modal-header arches-modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                                 ×
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-xs-4 col-xs-offset-1" style="">
 
-                    <div id="overlay-panel" class="tools-panel hidden" style="margin-top: -490px; overflow-y: scroll; overflow-x: hidden; border-top-left-radius: 5px; border-top-right-radius: 5px; height: 435px;">
+                    <div id="overlay-panel" class="tools-panel hidden" style="margin-top: -490px; overflow-y: scroll; overflow-x: hidden; height: 435px;">
                         <div class="modal-header arches-modal-header">
 
                             <button type="button" class="close pull-right" data-dismiss="modal" aria-hidden="true">
@@ -166,7 +166,7 @@
             <!-- Map Tools -->
             <div class="row" style="height:0px;">
 
-                <div class="btn-group" style="top:-100px;left:85px;">
+                <div class="btn-group" style="top:-100px;left:86px;">
 
                     <button id="inventory-home" type="button" class="btn btn-primary arches-map-tools-pressed hidden" style="width: 50px; border: 1px solid rgba(206,217,233,.95);"><i class="fa fa-caret-down"></i>
                     </button>
