adding the related files form

--- a/arches_hip/templates/views/forms/condition.htm
+++ b/arches_hip/templates/views/forms/condition.htm
@@ -34,7 +34,7 @@
         <!-- Condition Assessements-->
         <div id="current-items" style="display: none;" data-bind="foreach: data.data, visible: true">
             <div class="arches-crud-record">
-            <div  class="row margin-top-minus-5 margin-bottom-10" id="completed-evaluations" style="display: block;">
+            <div  class="row margin-top-minus-5 margin-bottom-10" style="display: block;">
                 <div class="col-xs-12">
 
                     <div class="margin-left-5">
