initial work on activity summary form

--- a/arches_hip/templates/views/forms/activity-actions.htm
+++ b/arches_hip/templates/views/forms/activity-actions.htm
@@ -3,7 +3,7 @@
 
 {% block form_content %}
 
-
+<div id='activity-actions-section'>
                     
         <!-- Actiions Start CRUD Form -->
         <div class="row">
@@ -29,18 +29,19 @@
                                         
                                         <!-- Period and From/To Dates -->
                                         <div>
-                                            <div style="width:25%;" class="select2 arches-select2-crud-form resource-type" id="period-dropdown" data-bind="select2: {value: getEditedNode('ACTIVITY_TYPE.E55', 'value'), placeholder: '{% trans "start action" %}', multiple: false, dataKey: 'ACTIVITY_TYPE.E55'}"></div>&nbsp;
+                                            <div style="width:20%;" class="select2 arches-select2-crud-form resource-type" id="period-dropdown" data-bind="select2: {value: getEditedNode('ACTIVITY_TYPE.E55', 'value'), placeholder: '{% trans "start action" %}', multiple: false, dataKey: 'ACTIVITY_TYPE.E55'}">
+                                            </div>&nbsp;
                                         
                                             <div class="form-group" style="padding-left: 0px; padding-right: 0px; width: 25%;">
                                                 <div class="input-group datetimepicker" style ="width:100%;" >
-                                                    <input type="text" id="date" style="height: 32px;" placeholder="{% trans 'start date' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('TO_DATE.E49', 'value')} ">
+                                                    <input type="text" id="action_to_date" style="height: 32px;" placeholder="{% trans 'start date' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('TO_DATE.E49', 'value')} ">
                                                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                                 </div>
                                             </div>&nbsp;
 
                                             <div class="form-group" style="padding-left: 0px; padding-right: 0px; width: 25%;">
                                                 <div class="input-group datetimepicker" style ="width:100%;" >
-                                                    <input type="text" id="date" style="height: 32px;" placeholder="{% trans 'end date' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('FROM_DATE.E49', 'value')} ">
+                                                    <input type="text" id="action_from_date" style="height: 32px;" placeholder="{% trans 'end date' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('FROM_DATE.E49', 'value')} ">
                                                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                                 </div>
                                             </div>
@@ -80,7 +81,7 @@
                                             </div>
 
                                             <!-- Add Button -->
-                                            <div class="btn-group">
+<!--                                             <div class="btn-group">
                                                 <button type="button" id="address-button" class="btn btn-primary" style="height: 32px;">Add</button>
                                                 <button type="button" class="btn btn-primary dropdown-toggle" style="height: 32px;" data-toggle="dropdown">
                                                     <i class="fa fa-chevron-down"></i>
@@ -89,7 +90,7 @@
                                                 <ul class="dropdown-menu" role="menu">
                                                     <li><a href="#">Discard edits</a></li>
                                                 </ul>
-                                            </div>
+                                            </div> -->
                                             <!-- End Add Button -->
 
                                         </div>
@@ -117,19 +118,18 @@
                             This activity includes these start actions:
                         </dd>
 
-                        <dd class="margin-left-5">
-                            <div class="arches-crud-record" id="">
-                                <a href="" class="arches-CRUD-child" title="Delete this record"><i class="arches-CRUD-delete fa fa-trash-o"></i></a>
-                                <a href="" id="" class="arches-CRUD-child manage-address" title="Edit this record">Excavation<span class="text-muted arches-crud-type-identifier"> (Activity type)&nbsp; </span> December 1, 2010<span class="text-muted arches-crud-type-identifier"> (Start date)&nbsp; </span> </span> End date not recorded <span class="text-muted arches-crud-type-identifier"> (End date)&nbsp; </span>
-                                </a>
-                            </div>
-                        </dd>
+                        <dd class="margin-left-5" style="display: none;" data-bind="visible: true">
+                            <div data-bind="visible: getBranchLists().length == 0" class="txt-color-blue">{% trans "No Actions Defined" %}</div>   
 
-                        <dd class="margin-left-5">
-                            <div class="arches-crud-record" id="">
-                                <a href="" class="arches-CRUD-child" title="Delete this record"><i class="arches-CRUD-delete fa fa-trash-o"></i></a>
-                                <a href="" id="" class="arches-CRUD-child manage-address" title="Edit this record">Photo survey<span class="text-muted arches-crud-type-identifier"> (Activity type)&nbsp; </span> June 13, 2009<span class="text-muted arches-crud-type-identifier"> (Start date)&nbsp; </span> </span> June 15, 2009<span class="text-muted arches-crud-type-identifier"> (End date)&nbsp; </span>
-                                </a>
+                            <div data-bind='foreach: getBranchLists()'>
+                                <div class="arches-crud-record">
+                                    <a href="javascript:void(0)" class="arches-CRUD-child" title="Delete this name"><i data-bind='click: $parent.deleteItem.bind($parent)' class="arches-CRUD-delete fa fa-trash-o"></i></a>
+                                    <a href="javascript:void(0)" class="arches-CRUD-child arches-CRUD-edit" data-bind='click: $parent.editItem.bind($parent)' title="Edit this name">
+                                        <span data-bind='text: nodes.get("ACTIVITY_TYPE.E55", "label")' style="padding-right:2px;"></span><span class="text-muted arches-crud-type-identifier"> ({% trans "Activity type" %}),</span>
+                                        <span data-bind='text: nodes.get("FROM_DATE.E49", "value").substr(0,10)' style="padding-right:2px;"></span>({% trans "Start Date" %})<span class="text-muted arches-crud-type-identifier"></span>
+                                        <span data-bind='text: nodes.get("TO_DATE.E49", "value").substr(0,10)' style="padding-right:2px;">({% trans "End Date" %})</span>
+                                    </a>
+                                </div>
                             </div>
                         </dd>
 
@@ -139,6 +139,6 @@
             </div>
         </div>
         <!-- End Activity Start Records -->
-
+</div>
 
 {% endblock form_content %}
