--- a/arches_hip/templates/views/forms/roles.htm
+++ b/arches_hip/templates/views/forms/roles.htm
@@ -106,7 +106,7 @@
                 </dd>
                 <!-- End Form -->
             </dl>
-            <div class="alert alert-danger branch-invalid-alert" role="alert" style="display:none;">{% trans "The role type, period and from and to values must be populated." %}</div>
+            <div class="alert alert-danger branch-invalid-alert" role="alert" style="display:none;">{% trans "The role type value must be populated." %}</div>
         </div>
         <div class="row">
             <div class="col-xs-12">
